{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 110,
  "lineage": "9f5fc653-7d59-01c9-9ffb-775c518c8c51",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/bilal-tf-subnet2",
            "name": "bilal-tf-subnet2",
            "resource_group_name": "bilal-tf-rg",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "a51e2fa2-7166-4fcf-b097-d2017f0ec4f1",
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "eastus",
            "name": "acctvnet",
            "resource_group_name": "bilal-tf-rg",
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/publicIPAddresses/mywinvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.157.25",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mywinvm-pip-0",
            "resource_group_name": "bilal-tf-rg",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkInterfaces/mywinvm-nic-0",
            "internal_domain_name_suffix": "uixr3jlgohhu5mex0iax4dwe4b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mywinvm-ip-0",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/publicIPAddresses/mywinvm-pip-0",
                "subnet_id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/bilal-tf-subnet2"
              }
            ],
            "location": "eastus",
            "name": "mywinvm-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "bilal-tf-rg",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network",
            "module.windowsservers.azurerm_public_ip.vm",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkInterfaces/mywinvm-nic-0|/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg",
            "network_interface_id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkInterfaces/mywinvm-nic-0",
            "network_security_group_id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network",
            "module.windowsservers.azurerm_network_interface.vm",
            "module.windowsservers.azurerm_network_security_group.vm",
            "module.windowsservers.azurerm_public_ip.vm",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg",
            "location": "eastus",
            "name": "mywinvm-nsg",
            "resource_group_name": "bilal-tf-rg",
            "security_rule": [],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/networkSecurityGroups/mywinvm-nsg/securityRules/allow_remote_3389_in_all",
            "name": "allow_remote_3389_in_all",
            "network_security_group_name": "mywinvm-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "bilal-tf-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.windowsservers.azurerm_network_security_group.vm",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.windowsservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5512ccff-e438-4e2f-be18-21b19ecb7a0a/resourceGroups/bilal-tf-rg/providers/Microsoft.Network/publicIPAddresses/mywinvm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mywinvm-pip-0",
            "resource_group_name": "bilal-tf-rg",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.windowsservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    }
  ]
}